// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should MoviePage render correctly with authorization 1`] = `
Array [
  <section
    className="movie-card movie-card--full"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="movie-card__hero"
    >
      <div
        className="movie-card__bg"
      >
        <img
          alt="The Grand Budapest Hotel"
          src="img/the-grand-budapest-hotel-bg.jpg"
        />
      </div>
      <h1
        className="visually-hidden"
      >
        WTW
      </h1>
      <header
        className="page-header movie-card__head"
      >
        <div
          className="logo"
        >
          <a
            className="logo__link"
            href="/"
            onClick={[Function]}
          >
            <span
              className="logo__letter logo__letter--1"
            >
              W
            </span>
            <span
              className="logo__letter logo__letter--2"
            >
              T
            </span>
            <span
              className="logo__letter logo__letter--3"
            >
              W
            </span>
          </a>
        </div>
        <UserBlock />
      </header>
      <div
        className="movie-card__wrap"
      >
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            The Grand Budapest Hotel
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Comedy
            </span>
            <span
              className="movie-card__year"
            >
              2014
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <a
              className="btn btn--play movie-card__button"
              href="/player/1"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </a>
            <ButtonChangeFilmStatus
              isAddToMyList={false}
              onChangeFilmStatus={[Function]}
            />
            <a
              className="btn movie-card__button"
              href="/films/1/review"
              onClick={[Function]}
            >
              Add review
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="movie-card__wrap movie-card__translate-top"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster movie-card__poster--big"
        >
          <img
            alt="The Grand Budapest Hotel"
            height="327"
            src="img/the-grand-budapest-hotel-poster.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <Tabs
            activeTab="Overview"
            film={
              Object {
                "details": Object {
                  "runtime": 99,
                },
                "id": 1,
                "moreInfo": Object {
                  "backgroundColor": "#ffffff",
                  "backgroundSrc": "img/the-grand-budapest-hotel-bg.jpg",
                  "genre": "Comedy",
                  "isAddToMyList": false,
                  "playPreviewSrc": "https://some-link",
                  "playVideoSrc": "https://some-link",
                  "posterSrc": "img/the-grand-budapest-hotel-poster.jpg",
                  "releaseDate": 2014,
                },
                "overview": Object {
                  "actorsList": Array [
                    "Bill Murray",
                    "Edward Norton",
                    "Jude Law",
                    "Willem Dafoe",
                    "Saoirse Ronan",
                  ],
                  "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort,
      presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy,
      becomes Gustave's friend and protege.",
                  "director": "Wes Andreson",
                  "rating": 8.9,
                  "ratingCount": 240,
                },
                "preview": Object {
                  "src": "img/the-grand-budapest-hotel-poster.jpg",
                  "title": "The Grand Budapest Hotel",
                },
              }
            }
            id={1}
            onClickTab={[Function]}
          />
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog catalog--like-this"
    >
      <h2
        className="catalog__title"
      >
        More like this
      </h2>
      <MoviesList
        films={Array []}
      />
    </section>
    <Footer />
  </div>,
]
`;

exports[`Should MoviePage render correctly without authorization 1`] = `
Array [
  <section
    className="movie-card movie-card--full"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="movie-card__hero"
    >
      <div
        className="movie-card__bg"
      >
        <img
          alt="The Grand Budapest Hotel"
          src="img/the-grand-budapest-hotel-bg.jpg"
        />
      </div>
      <h1
        className="visually-hidden"
      >
        WTW
      </h1>
      <header
        className="page-header movie-card__head"
      >
        <div
          className="logo"
        >
          <a
            className="logo__link"
            href="/"
            onClick={[Function]}
          >
            <span
              className="logo__letter logo__letter--1"
            >
              W
            </span>
            <span
              className="logo__letter logo__letter--2"
            >
              T
            </span>
            <span
              className="logo__letter logo__letter--3"
            >
              W
            </span>
          </a>
        </div>
        <UserBlock />
      </header>
      <div
        className="movie-card__wrap"
      >
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            The Grand Budapest Hotel
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Comedy
            </span>
            <span
              className="movie-card__year"
            >
              2014
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <a
              className="btn btn--play movie-card__button"
              href="/player/1"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </a>
            <ButtonChangeFilmStatus
              isAddToMyList={false}
              onChangeFilmStatus={[Function]}
            />
            
          </div>
        </div>
      </div>
    </div>
    <div
      className="movie-card__wrap movie-card__translate-top"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster movie-card__poster--big"
        >
          <img
            alt="The Grand Budapest Hotel"
            height="327"
            src="img/the-grand-budapest-hotel-poster.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <Tabs
            activeTab="Overview"
            film={
              Object {
                "details": Object {
                  "runtime": 99,
                },
                "id": 1,
                "moreInfo": Object {
                  "backgroundColor": "#ffffff",
                  "backgroundSrc": "img/the-grand-budapest-hotel-bg.jpg",
                  "genre": "Comedy",
                  "isAddToMyList": false,
                  "playPreviewSrc": "https://some-link",
                  "playVideoSrc": "https://some-link",
                  "posterSrc": "img/the-grand-budapest-hotel-poster.jpg",
                  "releaseDate": 2014,
                },
                "overview": Object {
                  "actorsList": Array [
                    "Bill Murray",
                    "Edward Norton",
                    "Jude Law",
                    "Willem Dafoe",
                    "Saoirse Ronan",
                  ],
                  "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort,
      presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy,
      becomes Gustave's friend and protege.",
                  "director": "Wes Andreson",
                  "rating": 8.9,
                  "ratingCount": 240,
                },
                "preview": Object {
                  "src": "img/the-grand-budapest-hotel-poster.jpg",
                  "title": "The Grand Budapest Hotel",
                },
              }
            }
            id={1}
            onClickTab={[Function]}
          />
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog catalog--like-this"
    >
      <h2
        className="catalog__title"
      >
        More like this
      </h2>
      <MoviesList
        films={Array []}
      />
    </section>
    <Footer />
  </div>,
]
`;
